--- a/PBSadmbwin/inst/doc/ChangeLog.txt
+++ b/PBSadmbwin/inst/doc/ChangeLog.txt
@@ -1,5 +1,10 @@
 PBSadmbwin Changes
 ==================
+0.50.r11  2009-08-13  Rowan
+  - Added the library files to ADMB/lib (missing for some strange reason).
+  - Modified .callSys (need to explicitly state 'intern=TRUE' in calls to 'system' and 'shell'
+	as arguments other than the first passed through '...' seem to be ignored).
+
 0.50.r10  2009-08-12  Rowan
   - Fiddled with '.callSys' and 'convAD', 'compAD', and 'linkAD' (still not satisfied).
   - Made slight change to ADMBcmd[7,"Command"]
