--- a/PBSadmb/inst/doc/ChangeLog.txt
+++ b/PBSadmb/inst/doc/ChangeLog.txt
@@ -4,7 +4,10 @@ Authors:  JTS = Jon T. Schnute
           RH  = Rowan Haigh
           ACB = Alex Couture-Beil
 -----------------------------------
-0.64  2012-06-05  Authors
+
+0.64  2012-10-31  Authors
+  - Fixed "no visible bindings" nonsense; grabbed new manuals from ADMB-project.org and compacted them with "tools::compactPDF'. (RH 10/31)
+  - Jon changed email address to schnutej-dfo@shaw.ca (RH 10/30)
   - Exported the '.clean' functions from the namespace. (RH 6/5)
   - Modified GUI so that user can view the window description file and the project's R code. (RH 6/5)
   - Modified function 'runAD' to remove trailing whitespace if the executable has no arguments. (RH 6/5)
