--- a/PBSadmb/inst/doc/ChangeLog.txt
+++ b/PBSadmb/inst/doc/ChangeLog.txt
@@ -4,7 +4,8 @@ Authors:  JTS = Jon T. Schnute
           RH  = Rowan Haigh
           ACB = Alex Couture-Beil
 -----------------------------------
-0.68  2014-02-27
+0.68  2014-03-03
+  - Revised UG for Jon's perusal. (RH 3/3)
   - Added new function `saveADpaths` to save paths to a 2-column text file. (RH 2/27)
   - Changed GUI to only recognise the `pathfile` and not the `optfile`. (RH 2/27)
   - Added new function `setupAD` to initialize and validate the paths to admbpath, gccpath, and editor for command line functions. (JTS/RH 2/26)
