--- a/PBSadmb/inst/doc/ChangeLog.txt
+++ b/PBSadmb/inst/doc/ChangeLog.txt
@@ -4,7 +4,9 @@ Authors:  JTS = Jon T. Schnute
           RH  = Rowan Haigh
           ACB = Alex Couture-Beil
 -----------------------------------
-0.68  2014-03-27
+0.68  2014-04-08
+  - Added a vignette (Kurt indicates that this is sufficient) to satisfy yet another Rcheck that we don't see. (RH 4/8)
+	* checking for code which exercises the package ... WARNING ... No examples, no tests, no vignettes
   - Jon requested that Rowan becomes the package Maintainer. (RH 3/27)
   - For PBSadmb we have to IMPORT and DEPEND on PBSmodelling (see DESCRIPTION and NAMESPACE files). (RH 3/20)
 	IMPORT alone cannot find `ComboBox` when `admb()` is called.
