--- a/PBSadmb/inst/doc/ChangeLog.txt
+++ b/PBSadmb/inst/doc/ChangeLog.txt
@@ -5,7 +5,8 @@ Authors:  JTS = Jon T. Schnute
           ACB = Alex Couture-Beil
 -----------------------------------
 
-0.69  2015-01-28
+0.69  2015-01-29
+  - Updated the User's Guide. (RH 150129)
   - Debugged a few things in the GUI and R code; updated User's Guide. (RH 150128)
   - Changed function names: `setADMBPath' to `setADMBpath' and `setADMBVer' to `setADMBver'. (RH 150127)
   - Updated a number of document (.Rd) files. (RH 150127)
